Add initial compile support